--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "seed": "tsx prisma/seed.ts"
   },
   "devDependencies": {
+    "@faker-js/faker": "8.4.1",
     "@types/node": "^20.12.4",
     "prisma": "^5.12.1",
     "tsup": "^8.0.2",
@@ -24,6 +25,7 @@
     "typescript": "^5.4.4"
   },
   "dependencies": {
+    "dayjs": "1.11.10",
     "@fastify/cors": "^9.0.1",
     "@fastify/swagger": "^8.14.0",
     "@fastify/swagger-ui": "^3.0.0",
